syntax = "proto3";

import "Protos/common.proto";
import "Protos/FileGroups/fileGroupModel.proto";
import "Protos/FileGroups/fileGroupFilter.proto";
import "Protos/FileGroupType/fileGroupType.proto";

option csharp_namespace = "SakhaTyla.Web.Protos.FileGroups";

service FileGroupService {
    rpc GetFileGroups(GetFileGroupsRequest) returns (FileGroupPageModel);
    rpc GetFileGroup(GetFileGroupRequest) returns (FileGroup);
    rpc UpdateFileGroup(UpdateFileGroupRequest) returns (Empty);
    rpc CreateFileGroup(CreateFileGroupRequest) returns (CreatedEntity);
    rpc DeleteFileGroup(DeleteFileGroupRequest) returns (Empty);
}

message CreateFileGroupRequest {
    oneof nameOneOf {
        string name = 6;
    }
    oneof typeOneOf {
        FileGroupType type = 7;
    }
    oneof locationOneOf {
        string location = 8;
    }
    oneof acceptOneOf {
        string accept = 9;
    }
}

message DeleteFileGroupRequest {
    int32 id = 1;
}

message GetFileGroupRequest {
    int32 id = 1;
}

message GetFileGroupsRequest {
    oneof pageIndexOneOf {
        int32 pageIndex = 1;
    }
    oneof pageSizeOneOf {
        int32 pageSize = 2;
    }
    FileGroupFilter filter = 3;
    string orderBy = 4;
    oneof orderDirectionOneOf {
        OrderDirection orderDirection = 5;
    }
}

message UpdateFileGroupRequest {
    int32 id = 1;
    oneof nameOneOf {
        string name = 6;
    }
    oneof typeOneOf {
        FileGroupType type = 7;
    }
    oneof locationOneOf {
        string location = 8;
    }
    oneof acceptOneOf {
        string accept = 9;
    }
}
